const Person = require('./Person')

class Maintenance extends Person {

    constructor(name, workID){
    super(name)
    this.workID = workID
   
}

// working progress //
    repairScooter(){
        if (isBroken = true)
            return true
    }
}
module.exports = Maintenance
