class Person {
    constructor(name) {
        this.name = name
        
    }
}

module.exports = Person
